# encoder-benchmark

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: linux_ubuntu_release.yml  pull_request.yml  pull_request_workflow.yml  release.yml  setup-and-build.yml  windows_release.yml
benchmark/: Cargo.toml
benchmark/src/: benchmark_cli.rs  main.rs
cli/: Cargo.toml
cli/src/: cli_util.rs  lib.rs  supported.rs
codecs/: Cargo.toml
codecs/src/: amf.rs  apple_silicon.rs  av1_qsv.rs  intel_igpu.rs  lib.rs  nvenc.rs  permute.rs  qsv.rs  resolutions.rs  vendor.rs
engine/: Cargo.toml
engine/src/: benchmark_engine.rs  engine.rs  fps_stats.rs  h264_hevc_nvenc.rs  lib.rs  nvenc.rs  permutation_engine.rs  permute.rs  progressbar.rs  resolutions.rs  result.rs  stat_tcp_listener.rs  threads.rs
environment/: Cargo.toml
environment/src/: env.rs
ffmpeg/: Cargo.toml
ffmpeg/src/: args.rs  ffprobe.rs  lib.rs  metadata.rs  report_files.rs
gpus/: Cargo.toml
gpus/src/: device.rs  lib.rs
packaging/linux/aur/: PKGBUILD  README.md
permutation/: Cargo.toml
permutation/src/: lib.rs  permutation.rs
permutor-cli/: Cargo.toml
permutor-cli/src/: main.rs  permutor_cli.rs
permutor/src/: permutor_cli.rs
references/nvidia-turing/: 1080-120-h264.txt  1080-120-hevc.txt  1080-60-h264.txt  1080-60-hevc.txt  4k-60-h264.txt  4k-60-hevc.txt  720-120-h264.txt  720-120-hevc.txt  720-60-h264.txt  720-60-hevc.txt
src/: cli.rs  encode_file_downloader.rs  env.rs  ffmpeg.rs  main.rs  permutations.rs  progressbar.rs  stat_tcp_listener.rs
src/ffmpeg/: args.rs  ffprobe.rs  metadata.rs  report_files.rs
src/permutations/: fps_stats.rs  h264_hevc_nvenc.rs  nvenc.rs  permute.rs  resolutions.rs  result.rs
