[package]
name = "permutor-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
environment = { path = "../environment" }
engine = { path = "../engine" }
cli = { path = "../cli" }
permutation = { path = "../permutation" }
ffmpeg = { path = "../ffmpeg" }
codecs = { path = "../codecs" }